[package]
name = "ravenscans"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
aidoku = { version = "0.1", default-features = false }
tl = "0.7"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"

[features]
default = []
